--- a/StudentMan.qrc
+++ b/StudentMan.qrc
@@ -13,5 +13,7 @@
         <file>resources/icon/teacher.png</file>
         <file>resources/icon/exit.png</file>
         <file>resources/icon/logout.png</file>
+        <file>resources/icon/tagged.png</file>
+        <file>resources/icon/untagged.png</file>
     </qresource>
 </RCC>
